fixed y axis overflow

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -10,7 +10,7 @@ html {
 	font-size: 62.5%;
     box-sizing: border-box;
     overflow-x: hidden;
-    overflow-y: visible;
+    // overflow-y: visible;
     scroll-behavior: smooth;
     -webkit-overflow-scrolling: touch;
 
